src/tests/testfiles/binary-operators/types-34.txt
Error at 5:7: Comparison operator operands need to be of same type (have float and char *)
a == b;
  ^
